-- -*- mode: fundamental -*-

name:                decamp
version:             0.0.0
synopsis:            Distributed bug tracker
description:         
  decamp-bugtracker is a very simple distributed bug-tracking
  system. It literally stores bugs in a YAML file, and then
  (optionally) version-controls the file with git. The idea is pretty
  portable, although this implementation is written in Haskell.
license:             GPL-3
license-file:        LICENSE
author:              Peter Harpending
maintainer:          peter@harpending.org
copyright:           Copyright (C) 2015 Peter Harpending
category:            Data, Development, Git
build-type:          Simple
cabal-version:       >=1.10
data-files:
  LICENSE
  TUTORIAL.md
  res/schemata/*.yml
extra-source-files:
  README.md
  LICENSE
  TUTORIAL.md
  res/schemata/*.yml

library
  default-extensions:
    OverloadedStrings
    MultiWayIf
    LambdaCase
  exposed-modules:     
    Data.Decamp.Initialize
    Data.Decamp.Project
  build-depends:
      base              ==4.7.*
    , base16-bytestring ==0.1.*
    , bytestring        ==0.10.*
    , directory
    , MissingH
    , readline		==1.0.*
    , time              ==1.4.*
    , text              >=1.1    && <1.3
    , yaml              ==0.8.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  -- other-modules:       
  -- other-extensions:    

executable decamp
  other-modules:
    Paths_decamp
  build-depends:
      base                  ==4.7.*
    , bytestring
    , decamp
    , optparse-applicative  ==0.11.*
  default-extensions:
    LambdaCase
    MultiWayIf
    OverloadedStrings
  default-language:    Haskell2010
  main-is:             decamp.hs
  ghc-options:         -Wall

source-repository head
  type: git
  location: https://github.com/pharpend/decamp-bugtracker.git