name:                decamp
version:             0.0.0
synopsis:            Distributed bug tracker
description:         
  decamp is a very simple distributed bug-tracking system. It literally stores
  bugs in a JSON file. The idea is pretty portable, although this implementation
  is written in Haskell.
license:             GPL-3
license-file:        LICENSE
author:              Peter Harpending
maintainer:          peter@harpending.org
copyright:           Copyright (C) 2015 Peter Harpending
category:            Data, Development, Git
build-type:          Simple
cabal-version:       >=1.10
data-files:
  README.md
  LICENSE
  TUTORIAL.md
  res/copyright.txt
  res/schemata/*.json
  res/templates/*.yaml

extra-source-files:
  README.md
  LICENSE
  TUTORIAL.md
  res/schemata/*.json

library
  default-extensions:
    OverloadedStrings
    MultiWayIf
    LambdaCase
  other-modules:
    Paths_decamp
  exposed-modules:     
    Data.Decamp
    Data.Decamp.Bug.Add
    Data.Decamp.Internal
    Data.Decamp.Initialize
    Data.Decamp.Project
    Data.Decamp.Schemata
    Data.Decamp.Trivia
    Data.Decamp.Types
  build-depends:
      aeson
    , aeson-pretty
    , base ==4.8.*
    , bytestring
    , directory >=1.2
    , editor-open >=0.2
    , MissingH
    , time
    , text
    , yaml
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans
  -- other-modules:       
  -- other-extensions:    

executable decamp
  other-modules:
    Paths_decamp
  build-depends:
      base ==4.8.*
    , bytestring
    , decamp
    , optparse-applicative ==0.11.*
  default-extensions:
    LambdaCase
    MultiWayIf
    OverloadedStrings
  default-language:    Haskell2010
  main-is:             decamp.hs
  ghc-options:         -Wall

source-repository head
  type: git
  location: https://notabug.org/pharpend/decamp.git
