name:                louse
version:             0.1.0.0
synopsis:            A distributed bug tracking program
description:
  Louse is a program for tracking bugs. It's designed to fit into a git
  repository.
homepage:            https://github.com/pharpend/louse
license:             GPL-3
license-file:        LICENSE
author:              Peter Harpending
maintainer:          peter@harpending.org
copyright:           Copyright (c) 2015, Peter Harpending.
category:            Data, Development, Git, Workflow
bug-reports:         https://github.com/pharpend/louse/issues
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  LICENSE
  README.md

source-repository head
  type:     git
  location: https://github.com/pharpend/louse.git

source-repository this
  type:     git
  location: https://github.com/pharpend/louse.git
  tag: 0.1.0.0

library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  exposed-modules:
    Louse
    Louse.Bug
    Louse.Comment
    Louse.Person
    Louse.Trees
  other-extensions:
    CPP
    FlexibleInstances
    MultiParamTypeClasses
    OverloadedStrings
  build-depends:
      base ==4.*
    , base16-bytestring
    , bytestring
    , containers
    , cryptohash
    , exceptional >=0.1.1
    , text
    , time
    , unordered-containers
    , yaml

executable louse
  hs-source-dirs:      src
  default-language:    Haskell2010
  main-is:             Main.hs
  build-depends:       base ==4.*
                      ,louse

test-suite spec
  hs-source-dirs:      spec
  default-language:    Haskell2010
  other-extensions:    OverloadedStrings
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  build-depends:       base ==4.*
                      ,base16-bytestring
                      ,containers
                      ,cryptohash
                      ,exceptional
                      ,hspec
                      ,louse
                      ,process >=1.2
                      ,QuickCheck
                      ,text
