name:                louse
version:             0.1.0.0
synopsis:            A distributed bug tracking program
description:
  Louse is a program for tracking bugs. It's designed to fit into a git
  repository.
homepage:            https://github.com/pharpend/louse
license:             GPL-3
license-file:        LICENSE
author:              Peter Harpending
maintainer:          peter@harpending.org
copyright:           Copyright (c) 2015, Peter Harpending.
category:            Data, Development, Git, Workflow
bug-reports:         https://github.com/pharpend/louse/issues
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  LICENSE
  README.md

executable louse
  hs-source-dirs:      src
  default-language:    Haskell2010
  main-is:             Main.hs
  ghc-options:         -Wall -threaded
  default-extensions:
    LambdaCase
    TemplateHaskell
  build-depends:      
      base ==4.8.*
    , aeson
    , bytestring
    , file-embed
    , github
    , louse
    , optparse-applicative
    , pager
    , text

source-repository head
  type:     git
  location: https://github.com/pharpend/louse.git
