name:                louse
version:             0.0.0
synopsis:            Bug tracker interface
description:
  Louse is a command-line utility to interact with remote bug trackers. The idea
  here is to use a tool on the developer's computer, rather than dealing with
  some silly web interface.
homepage:            https://gitlab.com/pharpend/louse
bug-reports:         https://gitlab.com/pharpend/louse/issues
license:             GPL-3
license-file:        LICENSE
author:              Peter Harpending
maintainer:          peter@harpending.org
copyright:           Copyright (c) 2016, Peter Harpending
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  
  LICENSE
  README.md

source-repository head
  type:     git
  location: https://gitlab.com/pharpend/louse.git

library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:
    Louse
  build-depends:
      base ==4.8.*

executable louse
  hs-source-dirs:      exc
  default-language:    Haskell2010
  main-is:             Main.hs
  ghc-options:         -Wall -threaded
  build-depends:
      base ==4.8.*
    , louse
    , optparse-applicative

test-suite spec
  hs-source-dirs:      spec
  default-language:    Haskell2010
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -threaded
  build-depends:
      base ==4.8.*
    , louse
    , hspec
