name:                louse
version:             0.1.0.0
synopsis:            A little command line tool to interact with bug trackers.
description:
  Louse is a program for reading from remote bug trackers and browsing the bugs
  locally.
homepage:            https://github.com/pharpend/louse
license:             GPL-3
license-file:        LICENSE
author:              Peter Harpending
maintainer:          peter@harpending.org
copyright:           Copyright (c) 2015-2016, Peter Harpending.
category:            Data, Development
bug-reports:         https://github.com/pharpend/louse/issues
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  LICENSE
  README.md

library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:
    LambdaCase
  exposed-modules:
    Louse.Fetch
  build-depends:      
      base ==4.8.*
    , aeson
    , bytestring
    , github
    , text
    , vector
    , yaml

executable louse
  hs-source-dirs:      src
  default-language:    Haskell2010
  main-is:             Main.hs
  ghc-options:         -Wall -threaded
  default-extensions:
    LambdaCase
    TemplateHaskell
  build-depends:      
      base ==4.8.*
    , aeson
    , bytestring
    , file-embed
    , github
    , louse
    , optparse-applicative
    , pager
    , text

source-repository head
  type:     git
  location: https://github.com/pharpend/louse.git
